# bioinfo-util

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
docs/: fastq_stats.md
src/: Makefile.am  fastq_stats.cpp
